--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,45 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
-    display: flex;
-    align-items: center;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    background: #FDFCEF;
 }
 
 * {
     box-sizing: border-box;
 }
 
+.container {
+    width: 1110px;
+    margin: 0 auto;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    font-weight: 700;
+    line-height: 1.4em;
+}
+
+p {
+    margin: 0;
+    line-height: 1.37em;
+}
+
 h1 {
     font-size: 50px;
 }
 
-p {
-    font-size: 18px;
-    margin: 30px;
+h2 {
+    font-size: 40px;
+    text-align: center;
 }
 
-a {
+section {
+    padding-top: 120px;
+}
+
+.btn {
     background: #FF6861;
     border-radius: 100px;
     color: #FFFFFF;
@@ -28,10 +48,106 @@ a {
     font-size: 18px;
     font-weight: 700;
     display: block;
-    width: 219px;
+    width: 227px;
+    transition: all 0.5s ease;
 }
 
-div {
+.btn:hover {
+    background: #A42923;
+}
+
+.header {
+    padding-top: 60px;
+}
+
+.introtext {
+    font-size: 18px;
+    margin: 30px 0px;
+}
+
+.offer-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 79px;
+}
+
+.offer {
     width: 465px;
-    margin-left: 180px;
+}
+
+.logo {
+    margin: 0 auto;
+    display: block;
+}
+
+.digit-item {
+    display: flex;
+    align-items: center;
+}
+
+.digit {
+
+    font-size: 20px;
+    font-weight: 700;
+    width: 77px;
+    height: 77px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 34px;
+    transition: all 0.7s;
+}
+
+.digit-item:hover .digit {
+    transform: scale(1.3);
+}
+
+.digit-title {
+    font-size: 30px;
+    margin-bottom: 11px;
+}
+
+.digits {
+    display: flex;
+    flex-direction: column;
+    gap: 41px;
+    width: 720px;
+    margin: 70px auto 0 auto;
+}
+
+.practice-wrap {
+    background: linear-gradient(102deg, #FFF7E3 17.38%, #FFE0DF 81.25%);
+    border-radius: 60px;
+    display: flex;
+    align-items: center;
+    padding: 93px 168px 89px 122px;
+}
+
+.practice-block {
+    width: 432px;
+}
+
+.practice-title {
+    text-align: left;
+}
+
+.practice-text {
+    margin: 24px 0;
+    width: 371px;
+}
+
+.ladybug {
+    margin-right: 101px;
+    transition: all 1.2s;
+}
+
+.ladybug:hover {
+    transform: scale(1.3);
+}
+
+.footer {
+    padding: 120px 0;
+    text-align: center;
+    font-size: 15px;
 }
